# TogMic

./: CLAUDE.md  README.md  UPDATER_SETUP.md  components.json  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
public/locales/de/: translation.json
public/locales/en/: translation.json
src/: App.css  App.tsx  i18n.ts  index.css  layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sound.rs
src-tauri/src/audio/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: ConfirmDialog.tsx  HotkeyInput.css  HotkeyInput.tsx  MuteIndicator.css  MuteIndicator.tsx  ProfileCard.css  ProfileCard.tsx  ProfileEditor.css  ProfileEditor.tsx  app-sidebar.tsx  app-wrapper.tsx  component-example.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  theme-context.ts  theme-provider.tsx
src/components/ui/: dialog.tsx  input.tsx  scroll-area.tsx  sidebar.tsx  sonner.tsx  switch.tsx
src/contexts/: AppContent.tsx  AppContext.ts  AppContext.tsx  MuteContext.ts  SettingsContext.ts  useMuteState.ts  useSettings.ts
src/pages/dashboard/: DashboardPage.tsx
src/pages/profiles/: ProfileCard.tsx  ProfileEditor.tsx  ProfilesPage.tsx
src/pages/settings/: SettingsPage.tsx
src/test/: HotkeyInput.test.tsx  utils.test.ts
